# ESP32-S3-BOX-SLINT-RUST

./: Cargo.toml  build.rs  espflash.toml  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: app.rs  board.rs  lcd.rs  main.rs  touch.rs  wifi.rs  xl9555.rs
ui/: app.slint
